--- a/Ejemplos html/estilos.css
+++ b/Ejemplos html/estilos.css
@@ -35,3 +35,20 @@ section {
     color: red;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
+table {
+    border:#283b28 1px solid;
+    width: 100%;
+}
+
+td {
+    border: 1px solid #283b28;
+    padding: 5px;
+    margin: 3px;
+    text-align: center;
+}
+
+p  {
+    text-align: justify;
+    font-size: 1.5em;
+}  
